testsuite/tests/grammar/invalid_query_comprehension/test.out
== bad-query-comprehension.lkt ==
bad-query-comprehension.lkt:12:32: error: unsupported expression: query comprehension is not supported yet
12 |     fun invalid_expr() : Int = from [1,2] match _ if true
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
